--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 663,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 664,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 665,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 666,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 667,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Request a program and shader slots from GPU\n",
     "program  = glCreateProgram()\n",
     "vertex   = glCreateShader(GL_VERTEX_SHADER)\n",
-    "fragment = glCreateShader(GL_FRAGMENT_SHADER)\n"
+    "fragment = glCreateShader(GL_FRAGMENT_SHADER)"
    ]
   },
   {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 668,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 669,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     "if not glGetShaderiv(vertex, GL_COMPILE_STATUS):\n",
     "    error = glGetShaderInfoLog(vertex).decode()\n",
     "    print(error)\n",
-    "    raise RuntimeError(\"Erro de compilacao do Vertex Shader\")\n"
+    "    raise RuntimeError(\"Erro de compilacao do Vertex Shader\")"
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 670,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 671,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Attach shader objects to the program\n",
     "glAttachShader(program, vertex)\n",
-    "glAttachShader(program, fragment)\n"
+    "glAttachShader(program, fragment)"
    ]
   },
   {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 672,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,13 +341,12 @@
     "    model['texture'] = texture_coords\n",
     "    model['faces'] = faces\n",
     "\n",
-    "    return model\n",
-    "\n"
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [
     {
@@ -418,12 +417,12 @@
     "print('Processando modelo piso.obj. Vertice final:',len(vertices_list))\n",
     "fim_pedra = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(1,'terreno/piso.jpg')\n"
+    "load_texture_from_file(1,'terreno/piso.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [
     {
@@ -448,12 +447,12 @@
     "print('Processando modelo grama.obj. Vertice final:',len(vertices_list))\n",
     "fim_grama = len(vertices_list)\n",
     "\n",
-    "load_texture_from_file(4,'terreno/grama.jpg')\n"
+    "load_texture_from_file(4,'terreno/grama.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 678,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -507,12 +506,12 @@
     "load_texture_from_file(9,'casa/plate_grey.jpg')\n",
     "load_texture_from_file(10,'casa/wood_balls_brown.jpg')\n",
     "load_texture_from_file(11,'casa/foundation_brown_brick.jpg')\n",
-    "load_texture_from_file(12,'casa/glass_window.jpg')\n"
+    "load_texture_from_file(12,'casa/glass_window.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 679,
    "metadata": {
     "scrolled": true
    },
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [
     {
@@ -611,12 +610,12 @@
     "arvore1_vertices_text.append(fim_arvore1)\n",
     "\n",
     "load_texture_from_file(15,'arvore/tronco-1.jpg')\n",
-    "load_texture_from_file(16,'arvore/folha-1.jpg')\n"
+    "load_texture_from_file(16,'arvore/folha-1.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 685,
    "metadata": {
     "tags": []
    },
@@ -738,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
@@ -899,6 +898,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 691,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processando modelo caveira.obj. Vertice inicial: 2584644\n",
+      "Processando modelo caveira.obj. Vertice final: 2824692\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('caveira/caveira.obj')\n",
+    "\n",
+    "print('Processando modelo caveira.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_caveira = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo caveira.obj. Vertice final:',len(vertices_list))\n",
+    "fim_caveira = len(vertices_list)\n",
+    "\n",
+    "load_texture_from_file(27,'caveira/caveira.jpg')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -911,12 +940,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Request a buffer slot from GPU\n",
-    "buffer = glGenBuffers(2)\n"
+    "buffer = glGenBuffers(2)"
    ]
   },
   {
@@ -928,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +972,7 @@
     "offset = ctypes.c_void_p(0)\n",
     "loc_vertices = glGetAttribLocation(program, \"position\")\n",
     "glEnableVertexAttribArray(loc_vertices)\n",
-    "glVertexAttribPointer(loc_vertices, 3, GL_FLOAT, False, stride, offset)\n"
+    "glVertexAttribPointer(loc_vertices, 3, GL_FLOAT, False, stride, offset)"
    ]
   },
   {
@@ -955,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,6 +1421,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 709,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_caveira(rotacao_inc):\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = rotacao_inc;\n",
+    "    rx = 0.0; ry = 1.0; rz = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    tx = 0.0; ty = 2.0; tz = -75.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    sx = 0.7; sy = 0.7; sz = 0.7;\n",
+    "    \n",
+    "    mat_model = model(angle, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "       \n",
+    "    glBindTexture(GL_TEXTURE_2D, 27)\n",
+    "    \n",
+    "    glDrawArrays(GL_TRIANGLES, ini_caveira, fim_caveira-ini_caveira)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1403,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,6 +1675,7 @@
     "tx_tz = [False, False]\n",
     "inc_x = -20.0   \n",
     "dec_z = 9.0\n",
+    "rotacao_inc = 0.0\n",
     "while not glfw.window_should_close(window):\n",
     "\n",
     "    glfw.poll_events() \n",
@@ -1649,6 +1706,7 @@
     "    desenha_cachorro()\n",
     "    desenha_homem()\n",
     "    desenha_cama()\n",
+    "    desenha_caveira(rotacao_inc)\n",
     "    desenha_parede(50.0, -1.7, 20.25, 90)\n",
     "    desenha_parede(50.0, -1.7, -20.25, 90)\n",
     "    desenha_parede(50.0, -1.7, 60.75, 90)\n",
@@ -1668,6 +1726,7 @@
     "    loc_view = glGetUniformLocation(program, \"view\")\n",
     "    glUniformMatrix4fv(loc_view, 1, GL_FALSE, mat_view)\n",
     "\n",
+    "    rotacao_inc += 0.1\n",
     "    mat_projection = projection()\n",
     "    loc_projection = glGetUniformLocation(program, \"projection\")\n",
     "    glUniformMatrix4fv(loc_projection, 1, GL_FALSE, mat_projection)    \n",
