--- a/Trabalho 2/House.ipynb
+++ b/Trabalho 2/House.ipynb
@@ -9,13 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 714,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glfw\n",
     "from OpenGL.GL import *\n",
-    "import OpenGL.GL.shaders\n",
     "import numpy as np\n",
     "import glm\n",
     "import math\n",
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 715,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
     "altura = 768\n",
     "largura = 1366\n",
     "qtd_texturas = 50\n",
-    "window = glfw.create_window(largura, altura, \"Trabalho 2\", None, None)\n",
+    "window = glfw.create_window(largura, altura, \"House\", None, None)\n",
     "glfw.make_context_current(window)"
    ]
   },
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 719,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 729,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 730,
    "metadata": {
     "scrolled": true
    },
@@ -543,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 733,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 736,
    "metadata": {
     "tags": []
    },
@@ -737,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 737,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 738,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 739,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 740,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 741,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 742,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 743,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 744,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 745,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 746,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 747,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 748,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 749,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 750,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 751,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 752,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 753,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 754,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 755,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 756,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 757,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 758,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 759,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 760,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 761,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 762,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 763,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,11 +1664,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 764,
    "metadata": {},
    "outputs": [],
    "source": [
-    "glEnable(GL_DEPTH_TEST) ### importante para 3D\n",
+    "glEnable(GL_DEPTH_TEST)\n",
     "global inc_x, dec_z, tx_tz, angle_duck\n",
     "angle_duck = -15.0\n",
     "tx_tz = [False, False]\n",
