--- a/Trabalho 2/House.ipynb
+++ b/Trabalho 2/House.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 718,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 719,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_model_from_file(filename):\n",
     "    \"\"\"Loads a Wavefront OBJ file. \"\"\"\n",
-    "    objects = {}\n",
+    "    filepath = 'Objects/' + filename\n",
     "    vertices = []\n",
     "    texture_coords = []\n",
     "    faces = []\n",
@@ -304,7 +304,7 @@
     "    material = None\n",
     "\n",
     "    # abre o arquivo obj para leitura\n",
-    "    for line in open(filename, \"r\"): ## para cada linha do arquivo .obj\n",
+    "    for line in open(filepath, \"r\"): ## para cada linha do arquivo .obj\n",
     "        if line.startswith('#'): continue ## ignora comentarios\n",
     "        values = line.split() # quebra a linha por espaço\n",
     "        if not values: continue\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,12 +353,13 @@
     "textures = glGenTextures(qtd_texturas)\n",
     "\n",
     "def load_texture_from_file(texture_id, img_textura):\n",
+    "    texturepath = 'Objects/' + img_textura\n",
     "    glBindTexture(GL_TEXTURE_2D, texture_id)\n",
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_REPEAT)\n",
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_REPEAT)\n",
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR)\n",
     "    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_LINEAR)\n",
-    "    img = Image.open(img_textura)\n",
+    "    img = Image.open(texturepath)\n",
     "    img_width = img.size[0]\n",
     "    img_height = img.size[1]\n",
     "    image_data = img.tobytes(\"raw\", \"RGB\", 0, -1)\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 727,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1599,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
