--- a/House 3D/House.ipynb
+++ b/House 3D/House.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trabalho 2"
+    "# House 3D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comandos disponíveis: ???"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,8 +392,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta função adiciona a textura na lista recebida como parâmetro e aumenta o valor do id da textura"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 122,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -545,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 123,
    "metadata": {
     "scrolled": true
    },
@@ -583,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 129,
    "metadata": {
     "tags": []
    },
@@ -809,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,13 +1102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "textures = np.zeros(len(textures_coord_list), [(\"position\", np.float32, 2)]) # duas coordenadas\n",
     "textures['position'] = textures_coord_list\n",
-    "\n",
     "\n",
     "# Upload data\n",
     "glBindBuffer(GL_ARRAY_BUFFER, buffer[1])\n",
@@ -1118,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
