Add environment and diffuse illumination

--- a/House 3D/House.ipynb
+++ b/House 3D/House.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1624,
+   "execution_count": 1751,
    "source": [
     "import glfw\n",
     "from OpenGL.GL import *\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1625,
+   "execution_count": 1752,
    "source": [
     "glfw.init()\n",
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE);\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1626,
+   "execution_count": 1753,
    "source": [
     "vertex_code = \"\"\"\n",
     "        attribute vec3 position;\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1627,
+   "execution_count": 1754,
    "source": [
     "fragment_code = \"\"\"\n",
     "\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1628,
+   "execution_count": 1755,
    "source": [
     "# Request a program and shader slots from GPU\n",
     "program  = glCreateProgram()\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1629,
+   "execution_count": 1756,
    "source": [
     "# Set shaders source\n",
     "glShaderSource(vertex, vertex_code)\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1630,
+   "execution_count": 1757,
    "source": [
     "# Compile shaders\n",
     "glCompileShader(vertex)\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1631,
+   "execution_count": 1758,
    "source": [
     "glCompileShader(fragment)\n",
     "if not glGetShaderiv(fragment, GL_COMPILE_STATUS):\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1632,
+   "execution_count": 1759,
    "source": [
     "# Attach shader objects to the program\n",
     "glAttachShader(program, vertex)\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1633,
+   "execution_count": 1760,
    "source": [
     "# Build program\n",
     "glLinkProgram(program)\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1634,
+   "execution_count": 1761,
    "source": [
     "def load_model_from_file(filename):\n",
     "    filepath = 'Objects/' + filename\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1635,
+   "execution_count": 1762,
    "source": [
     "glEnable(GL_TEXTURE_2D)\n",
     "textures = glGenTextures(qtd_texturas)\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1636,
+   "execution_count": 1763,
    "source": [
     "vertices_list = []    \n",
     "textures_coord_list = []\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1637,
+   "execution_count": 1764,
    "source": [
     "def increase_text(text_id):\n",
     "    global prox_textura\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1638,
+   "execution_count": 1765,
    "source": [
     "modelo = load_model_from_file('terreno/pedra.obj')\n",
     "\n",
@@ -467,12 +467,13 @@
     "pedra_vertices_text = []\n",
     "ini_pedra = len(vertices_list)\n",
     "\n",
-    "\n",
     "for face in modelo['faces']:\n",
     "    for vertice_id in face[0]:\n",
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
     "    for texture_id in face[1]:\n",
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "    for normal_id in face[2]:\n",
+    "        normals_list.append( modelo['normals'][normal_id-1] )\n",
     "print('Processando modelo piso.obj. Vertice final:',len(vertices_list))\n",
     "fim_pedra = len(vertices_list)\n",
     "\n",
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1639,
+   "execution_count": 1766,
    "source": [
     "modelo = load_model_from_file('terreno/grama.obj')\n",
     "\n",
@@ -509,6 +510,8 @@
     "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
     "    for texture_id in face[1]:\n",
     "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "    for normal_id in face[2]:\n",
+    "        normals_list.append( modelo['normals'][normal_id-1] )\n",
     "print('Processando modelo grama.obj. Vertice final:',len(vertices_list))\n",
     "fim_grama = len(vertices_list)\n",
     "\n",
@@ -532,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1640,
+   "execution_count": 1767,
    "source": [
     "modelo = load_model_from_file('casa/casa.obj')\n",
     "\n",
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1641,
+   "execution_count": 1768,
    "source": [
     "modelo = load_model_from_file('sofa/sofa.obj')\n",
     "\n",
@@ -642,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1642,
+   "execution_count": 1769,
    "source": [
     "modelo = load_model_from_file('tv/tv.obj')\n",
     "\n",
@@ -680,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1643,
+   "execution_count": 1770,
    "source": [
     "modelo = load_model_from_file('arvore/arvore-1.obj')\n",
     "\n",
@@ -726,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1644,
+   "execution_count": 1771,
    "source": [
     "modelo = load_model_from_file('pato/pato.obj')\n",
     "\n",
@@ -764,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1645,
+   "execution_count": 1772,
    "source": [
     "modelo = load_model_from_file('mesa/mesa.obj')\n",
     "\n",
@@ -802,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1646,
+   "execution_count": 1773,
    "source": [
     "modelo = load_model_from_file('ceu/ceu.obj')\n",
     "\n",
@@ -840,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1647,
+   "execution_count": 1774,
    "source": [
     "modelo = load_model_from_file('carro/carro.obj')\n",
     "\n",
@@ -880,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1648,
+   "execution_count": 1775,
    "source": [
     "modelo = load_model_from_file('cachorro/cachorro.obj')\n",
     "\n",
@@ -918,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1649,
+   "execution_count": 1776,
    "source": [
     "modelo = load_model_from_file('homem/homem.obj')\n",
     "\n",
@@ -956,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1650,
+   "execution_count": 1777,
    "source": [
     "modelo = load_model_from_file('cama/cama.obj')\n",
     "\n",
@@ -994,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1651,
+   "execution_count": 1778,
    "source": [
     "modelo = load_model_from_file('parede/wall.obj')\n",
     "\n",
@@ -1032,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1652,
+   "execution_count": 1779,
    "source": [
     "modelo = load_model_from_file('arvore/arvore-2.obj')\n",
     "\n",
@@ -1078,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1653,
+   "execution_count": 1780,
    "source": [
     "modelo = load_model_from_file('caveira/caveira.obj')\n",
     "\n",
@@ -1116,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1654,
+   "execution_count": 1781,
    "source": [
     "modelo = load_model_from_file('lampada/lampada.obj')\n",
     "\n",
@@ -1153,6 +1156,46 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 1782,
+   "source": [
+    "modelo = load_model_from_file('luz/luz.obj')\n",
+    "\n",
+    "print('Processando modelo luz.obj. Vertice inicial:',len(vertices_list))\n",
+    "luz_text_id = []\n",
+    "luz_vertices_text = []\n",
+    "ini_luz = len(vertices_list)\n",
+    "for face in modelo['faces']:\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "    for normal_id in face[2]:\n",
+    "        normals_list.append( modelo['normals'][normal_id-1] )\n",
+    "print('Processando modelo luz.obj. Vertice final:',len(vertices_list))\n",
+    "fim_luz = len(vertices_list)\n",
+    "\n",
+    "luz_vertices_text.append(ini_luz)\n",
+    "luz_vertices_text.append(fim_luz)\n",
+    "\n",
+    "### inserindo coordenadas de textura do modelo no vetor de texturas\n",
+    "\n",
+    "load_texture_from_file(prox_textura,'luz/luz.png')\n",
+    "increase_text(luz_text_id)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo luz.obj. Vertice inicial: 2826522\n",
+      "Processando modelo luz.obj. Vertice final: 2826558\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Para enviar nossos dados da CPU para a GPU, precisamos requisitar slots.\n",
@@ -1165,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1655,
+   "execution_count": 1783,
    "source": [
     "# Request a buffer slot from GPU\n",
     "buffer = glGenBuffers(3)"
@@ -1182,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1656,
+   "execution_count": 1784,
    "source": [
     "vertices = np.zeros(len(vertices_list), [(\"position\", np.float32, 3)])\n",
     "vertices['position'] = vertices_list\n",
@@ -1209,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1657,
+   "execution_count": 1785,
    "source": [
     "textures = np.zeros(len(textures_coord_list), [(\"position\", np.float32, 2)]) # duas coordenadas\n",
     "textures['position'] = textures_coord_list\n",
@@ -1235,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1658,
+   "execution_count": 1786,
    "source": [
     "normals = np.zeros(len(normals_list), [(\"position\", np.float32, 3)]) # três coordenadas\n",
     "normals['position'] = normals_list\n",
@@ -1262,10 +1305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1659,
+   "execution_count": 1787,
    "source": [
-    "loc_light_pos = glGetUniformLocation(program, \"lightPos\") # recuperando localizacao da variavel lightPos na GPU\n",
-    "glUniform3f(loc_light_pos, 30, 5.0, 9.0) ### posicao da fonte de luz"
+    "# loc_light_pos = glGetUniformLocation(program, \"lightPos\") # recuperando localizacao da variavel lightPos na GPU\n",
+    "# glUniform3f(loc_light_pos, 20.5, 7.0, -10.25) ### posicao da fonte de luz"
    ],
    "outputs": [],
    "metadata": {}
@@ -1282,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1660,
+   "execution_count": 1788,
    "source": [
     "def desenha_arvore1(_tx, _ty, _tz):\n",
     "    \n",
@@ -1322,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1661,
+   "execution_count": 1789,
    "source": [
     "def desenha_terreno():\n",
     "    \n",
@@ -1365,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1662,
+   "execution_count": 1790,
    "source": [
     "def desenha_sofa():\n",
     "    \n",
@@ -1404,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1663,
+   "execution_count": 1791,
    "source": [
     "def desenha_casa():\n",
     "    \n",
@@ -1443,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1664,
+   "execution_count": 1792,
    "source": [
     "def desenha_tv():\n",
     "    \n",
@@ -1482,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1665,
+   "execution_count": 1793,
    "source": [
     "def desenha_pato():\n",
     "    \n",
@@ -1548,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1666,
+   "execution_count": 1794,
    "source": [
     "def desenha_mesa():\n",
     "    \n",
@@ -1587,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1667,
+   "execution_count": 1795,
    "source": [
     "def desenha_ceu():\n",
     "    \n",
@@ -1606,10 +1649,10 @@
     "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
     "\n",
     "    # coeficiente de reflexao ambiente do modelo\n",
-    "    ka = ka_inc \n",
+    "    ka = 0.7 \n",
     "\n",
     "    # coeficiente de reflexao difusa do modelo\n",
-    "    kd = kd_inc \n",
+    "    kd = 0.7\n",
     "    \n",
     "    loc_ka = glGetUniformLocation(program, \"ka\") \n",
     "    glUniform1f(loc_ka, ka) \n",
@@ -1626,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1668,
+   "execution_count": 1796,
    "source": [
     "def desenha_carro():\n",
     "    \n",
@@ -1665,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1669,
+   "execution_count": 1797,
    "source": [
     "def desenha_cachorro():\n",
     "    \n",
@@ -1704,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1670,
+   "execution_count": 1798,
    "source": [
     "def desenha_homem():\n",
     "\n",
@@ -1743,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1671,
+   "execution_count": 1799,
    "source": [
     "def desenha_cama():\n",
     "    \n",
@@ -1782,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1672,
+   "execution_count": 1800,
    "source": [
     "def desenha_parede(tx, ty, tz, angle):\n",
     "    \n",
@@ -1817,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1673,
+   "execution_count": 1801,
    "source": [
     "def desenha_arvore2(_tx, _ty, _tz):\n",
     "    \n",
@@ -1856,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1674,
+   "execution_count": 1802,
    "source": [
     "def desenha_caveira(rotacao_inc):\n",
     "    \n",
@@ -1895,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1675,
+   "execution_count": 1803,
    "source": [
     "def desenha_lampada():\n",
     "    \n",
@@ -1933,6 +1976,74 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 1804,
+   "source": [
+    "def desenha_luz():\n",
+    "    \n",
+    "    global inc_x, dec_z, tx_tz, angle_duck\n",
+    "    \n",
+    "    # rotacao\n",
+    "    rx = 0.0; ry = 1.0; rz = 0.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    tx = inc_x; ty = -1.0; tz = dec_z;\n",
+    "    \n",
+    "    if inc_x > 25.0:\n",
+    "        inc_x = 25.0\n",
+    "        tx_tz = [True, False]\n",
+    "        angle_duck += 90.0\n",
+    "    elif inc_x < -20.0:\n",
+    "        inc_x = -20.0\n",
+    "        tx_tz = [True, True]\n",
+    "        angle_duck += 90.0\n",
+    "    elif inc_x < 25.0 and tx_tz == [False, False]:\n",
+    "        inc_x += 0.1\n",
+    "    elif inc_x > -20.0 and tx_tz == [False, True]:\n",
+    "        inc_x -= 0.1\n",
+    "    \n",
+    "    if dec_z < -35.0:\n",
+    "        dec_z = -35.0\n",
+    "        tx_tz = [False, True]\n",
+    "        angle_duck += 90.0\n",
+    "    elif dec_z > 9.0:\n",
+    "        dec_z = 9.0\n",
+    "        tx_tz = [False, False]\n",
+    "        angle_duck += 90.0\n",
+    "    elif dec_z > -35.0 and tx_tz == [True, False]:\n",
+    "        dec_z -= 0.1\n",
+    "    elif dec_z < 9.0 and tx_tz == [True, True]:\n",
+    "        dec_z += 0.1\n",
+    "    # escala\n",
+    "    sx = 0.3; sy = 0.3; sz = 0.3;\n",
+    "    \n",
+    "    mat_model = model(angle_duck, rx, ry, rz, tx, ty, tz, sx, sy, sz)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "\n",
+    "    # coeficiente de reflexao ambiente do modelo\n",
+    "    ka = ka_inc \n",
+    "\n",
+    "    # coeficiente de reflexao difusa do modelo\n",
+    "    kd = kd_inc \n",
+    "    \n",
+    "    loc_ka = glGetUniformLocation(program, \"ka\") \n",
+    "    glUniform1f(loc_ka, ka) \n",
+    "    \n",
+    "    loc_kd = glGetUniformLocation(program, \"kd\")\n",
+    "    glUniform1f(loc_kd, kd) \n",
+    "\n",
+    "    loc_light_pos = glGetUniformLocation(program, \"lightPos\") # recuperando localizacao da variavel lightPos na GPU\n",
+    "    glUniform3f(loc_light_pos, tx, ty, tz) ### posicao da fonte de luz   \n",
+    "\n",
+    "    for i in range(0, len(luz_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, luz_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, luz_vertices_text[i], luz_vertices_text[i+1]-luz_vertices_text[i])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Eventos para modificar a posição da câmera.\n",
@@ -1944,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1676,
+   "execution_count": 1805,
    "source": [
     "cameraPos   = glm.vec3(10.0,  10.0,  10.0);\n",
     "cameraFront = glm.vec3(0.0,  0.0, -1.0);\n",
@@ -1985,6 +2096,7 @@
     "\n",
     "def key_event(window,key,scancode,action,mods):\n",
     "    global cameraPos, cameraFront, cameraUp, cameraSpeed, polygonal_mode, far, near, fovy\n",
+    "    global ka_inc,kd_inc\n",
     "    \n",
     "    cameraSpeed = 1.5\n",
     "\n",
@@ -2028,8 +2140,20 @@
     "        if key == 80 and action==1 and polygonal_mode==False:\n",
     "            polygonal_mode=True\n",
     "        \n",
-    "        \n",
-    "        \n",
+    "    if key == 85 and (action==1 or action==2): # tecla cima\n",
+    "        ka_inc += 0.05\n",
+    "            \n",
+    "    if key == 265 and (action==1 or action==2): # tecla baixo\n",
+    "        kd_inc += 0.05\n",
+    "\n",
+    "    if key == 74 and (action==1 or action==2): # tecla cima\n",
+    "        ka_inc -= 0.05\n",
+    "            \n",
+    "    if key == 264 and (action==1 or action==2): # tecla baixo\n",
+    "        kd_inc -= 0.05\n",
+    "\n",
+    "\n",
+    "\n",
     "firstMouse = True\n",
     "yaw = -90.0 \n",
     "pitch = 0.0\n",
@@ -2084,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1677,
+   "execution_count": 1806,
    "source": [
     "def model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z):\n",
     "    \n",
@@ -2131,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1678,
+   "execution_count": 1807,
    "source": [
     "glfw.show_window(window)\n",
     "glfw.set_cursor_pos(window, lastX, lastY)"
@@ -2149,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1679,
+   "execution_count": 1808,
    "source": [
     "glEnable(GL_DEPTH_TEST)\n",
     "global inc_x, dec_z, tx_tz, angle_duck\n",
@@ -2202,6 +2326,7 @@
     "    desenha_parede(20.25, -1.7, 40.25, 0)\n",
     "    desenha_parede(-20.25, -1.7, 40.25, 0)\n",
     "    desenha_parede(-60.75, -1.7, 40.25, 0)\n",
+    "    desenha_luz()\n",
     "    #x = 48 -48\n",
     "    #z = -48.25 38.25\n",
     "    \n",
